@@ -17,6 +17,8 @@ PHP 4                                                                      NEWS
 - Fixed several leaks in ext/filepro. (Tony)
 - Fixed build system to always use bundled libtool files. (Jani)  
 - Fixed MacOSX shared extensions crashing on Apache startup. (Rasmus)
+- Fixed bug #32160 (file truncation in copy() when source & destination are
+  the same). (Ilia)
 - Fixed bug #31960 (msql_fetch_row() and msql_fetch_array() dropping columns
   with NULL values). (Daniel Convissor)
 - Fixed bug #31936 (set_h_errno() is redefined incompatibly). (Jani)
